fixed alignment  Please enter the commit message for your changes. Lines starting

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -96,7 +96,7 @@ fieldset {
 div.alert.continuity{
     min-height:70px;
     max-height: 70px;
-    border-spacing: 20px;
+    border-spacing: 19px;
 	h1{
 		line-height: 10px;
 		font-size: 20px;
@@ -109,7 +109,7 @@ div.alert.continuity{
 		border: 1px solid #D3D3D3;
     }
 div.span6{
-  margin-left: 10px;
+  margin-left:10px;
 	text-align: center;
 	padding-bottom: 10px;
 }
